// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should match snapshot 1`] = `
<styled.div
  valid={null}
>
  <styled.input
    autoComplete="new-password"
    data-test="Input"
    disableKeys={Array []}
    isEmpty={true}
    name="input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="My input"
    required={true}
    tinyLabels={null}
    type="submit"
    value=""
  />
</styled.div>
`;

exports[`Input component should match snapshot with error validation 1`] = `
<styled.div
  valid={false}
>
  <styled.input
    autoComplete="new-password"
    data-test="Input"
    disableKeys={Array []}
    isEmpty={true}
    name="input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="My input"
    required={true}
    tinyLabels={null}
    type="submit"
    value=""
  />
</styled.div>
`;

exports[`Input component should match snapshot with icon 1`] = `
<styled.div
  valid={true}
>
  <styled.input
    autoComplete="new-password"
    data-test="Input"
    disableKeys={Array []}
    isEmpty={true}
    name="input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="My input"
    required={true}
    tinyLabels={null}
    type="submit"
    value=""
  />
</styled.div>
`;

exports[`Input component should match snapshot with label 1`] = `
<styled.div
  valid={null}
>
  <styled.input
    autoComplete="new-password"
    data-test="Input"
    disableKeys={Array []}
    isEmpty={true}
    name="input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    required={true}
    tinyLabels={null}
    type="submit"
    value=""
  />
  <styled.label
    tinyLabels={null}
  >
    label
  </styled.label>
</styled.div>
`;

exports[`Input component should match snapshot with no validation 1`] = `
<styled.div
  valid={null}
>
  <styled.input
    autoComplete="new-password"
    data-test="Input"
    disableKeys={Array []}
    isEmpty={true}
    name="input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="My input"
    required={true}
    tinyLabels={null}
    type="submit"
    value=""
  />
</styled.div>
`;

exports[`Input component should match snapshot with success validation 1`] = `
<styled.div
  valid={true}
>
  <styled.input
    autoComplete="new-password"
    data-test="Input"
    disableKeys={Array []}
    isEmpty={true}
    name="input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="My input"
    required={true}
    tinyLabels={null}
    type="submit"
    value=""
  />
</styled.div>
`;
